# IA-generativa

./: .gitignore  README.md  README.me  app.py  pyproject.toml  requirements.txt
utils/: chatbot.py  text.py
