[tool.poetry]
name = "chatpdf-tre"
version = "0.1.0"
description = "Chat PDF"
authors = ["027452511643 <arthur.goncalves.estagiario@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.63.2"
tiktoken = "^0.9.0"
google-generativeai = "^0.8.4"
faiss-cpu = "^1.10.0"
langchain-google-genai = "^2.0.10"
streamlit-chat = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
